[package]
name = "project-absence"
description = "👁️  Uncover the unseen"
version = "1.1.0"
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/README.md",
    "/SECURITY.md",
    "/src/**",
]
repository = "https://github.com/project-absence/project-absence"
edition = "2021"

[features]
clipboard = ["dep:clipboard"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
clipboard = { version = "0.5.0", optional = true }
human_bytes = "0.4.3"
memory-stats = "1.2.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simple-semaphore = "0.2.0"
tangra = "1.3.0"
toml = "0.8.20"
