[package]
name = "project-absence"
description = "👁️  Uncover the unseen"
version = "0.1.0"
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/README.md",
    "/SECURITY.md",
    "/src/**",
]
repository = "https://github.com/project-absence/project-absence"
edition = "2024"

[features]
clipboard = ["dep:clipboard"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive"] }
clipboard = { version = "0.5.0", optional = true }
headless_chrome = "1.0.16"
human_bytes = "0.4.3"
memory-stats = "1.2.0"
mlua = { version = "0.10.3", features = ["lua54", "send", "vendored"] }
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
simple-semaphore = "0.2.0"
tangra = "1.3.0"
toml = "0.8.20"
