[package]
name = "project-absence"
description = "👁️  Uncover the unseen"
version = "0.11.0"
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/TERMS_OF_USE.md",
    "/src/**",
]
repository = "https://github.com/kkrypt0nn/project-absence"
edition = "2024"

[features]
default = []
clipboard = ["dep:clipboard"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
clipboard = { version = "0.5.0", optional = true }
human_bytes = "0.4.3"
memory-stats = "1.2.0"
mlua = { version = "0.11.1", features = ["lua54", "send", "vendored"] }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-semaphore = "0.2.0"
tangra = "1.3.0"
toml = "0.9.2"
